# concu-lucas-fede-tp2

./: CMakeLists.txt  README.md  main.cpp
src/Config/: Config.h
src/Domain/Client/: Client.cpp  Client.h
src/Domain/DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h
src/Domain/EntryRow/: entryRow.h
src/Domain/Persona/: Persona.cpp  Persona.h
src/Domain/Process/: Process.cpp  Process.h
src/Exception/: InvalidParamsException.cpp  InvalidParamsException.h  MessageQueueException.cpp  MessageQueueException.h
src/Exception/DBException/: DBException.cpp  DBException.h
src/Util/: MixedUtils.cpp  MixedUtils.h
src/Util/Cola/: Cola.h
src/Util/Fifos/: FifoEscritura.cpp  FifoLectura.cpp
src/Util/INIReader/: INIReader.cpp
src/Util/Locks/: LockFile.cpp  LockFile.h
src/Util/Logger/: Logger.cpp  Logger.h
src/Util/MemoriaCompartida/: MemoriaCompartida.h
src/Util/Pipes/: Pipe.cpp
src/Util/Semaforo/: Semaforo.cpp  Semaforo.h
src/Util/Seniales/: SignalHandler.cpp  SignalHandler.h
